--- a/calculator.html
+++ b/calculator.html
@@ -10,31 +10,32 @@
 <body>
 <div id="main-container">
     <div id="calc-display">
-        <input value="0">
+        <input id="calcDisplay" value="0">
+        <button id="func-button">Del</button>
     </div>
     <div id="math-buttons" class="functions">
-        <button id="func-button">+</button>
-        <button id="func-button">-</button>
-        <button id="func-button">*</button>
-        <button id="func-button">/</button>
-        <button id="func-button">=</button>
+        <button id="func-button">:)</button>
         <button id="func-button">AC</button>
+        <button id="func-button">Tip</button>
+        <button id="func-button">÷</button>
     </div>
     <div id='num-buttons'>
-        <button id="num">7</button>
-        <button id="num">8</button>
-        <button id="num">9</button><br>
-        <button id="num">4</button>
-        <button id="num">5</button>
-        <button id="num">6</button><br>
-        <button id="num">1</button>
-        <button id="num">2</button>
-        <button id="num">3</button><br>
-        <button id="num">0</button>
-        <button id="num">.</button>
-    </div>
-    <div id="enter">
-        <button id="func-button">Enter</button>
+        <button id="num" onclick="updateDisplay('7')">7</button>
+        <button id="num" onclick="updateDisplay('8')">8</button>
+        <button id="num" onclick="updateDisplay('9')">9</button>
+        <button id="func-button">*</button>
+        <button id="num" onclick="updateDisplay('4')">4</button>
+        <button id="num" onclick="updateDisplay('5')">5</button>
+        <button id="num" onclick="updateDisplay('6')">6</button>
+        <button id="func-button">-</button>
+        <button id="num" onclick="updateDisplay('1')">1</button>
+        <button id="num" onclick="updateDisplay('2')">2</button>
+        <button id="num" onclick="updateDisplay('3')">3</button>
+        <button id="func-button">+</button>
+        <button id="num0" onclick="updateDisplay('0')">0</button>
+        <button id="num" onclick="updateDisplay('.')">.</button>
+        <button id="func-button">=</button>
+
     </div>
 </div>
     
