--- a/calculator.html
+++ b/calculator.html
@@ -4,35 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <script src="./calc.js" defer></script>
-    <link rel="stylesheet" href="./styles.css">
+    <script src="./calculator.js" defer></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <div class="calculator-grid">
     <div class="output">
-        <div data-previous-operand class="previous-operand"></div>
-        <div data-current-operand class="current-operand">0</div>
-
+        <div class="prev-operand"></div>
+        <div class="curr-operand">0</div>    
     </div>
-        <button data-all-clear>AC</button>
-        <button data-tip>TIP</button>
-        <button data-delete>DEL</button>
-        <button data-operation>÷</button>
-        <button data-number>7</button>
-        <button data-number>8</button>
-        <button data-number>9</button>
-        <button data-operation>*</button>
-        <button data-number>4</button>
-        <button data-number>5</button>
-        <button data-number>6</button>
-        <button data-operation>-</button>
-        <button data-number>1</button>
-        <button data-number>2</button>
-        <button data-number>3</button>
-        <button data-operation>+</button>
-        <button data-number>0</button>
-        <button data-number>.</button>
-        <button data-equals class="span-two">=</button>
+        <button class="all-clear">AC</button>
+        <button class="tip">TIP</button>
+        <button class="delete">DEL</button>
+        <button class="operation">÷</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="operation">*</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="operation">-</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="operation">+</button>
+        <button class="number">0</button>
+        <button class="number">.</button>
+        <button class="equals span-two">=</button>
 </div>
     
 </body>
