Update index.html with new code and interface. Index-old is old version. Fix decimal entry and add footer and tip explanation. Calculator is finished.

--- a/calculator.html
+++ b/calculator.html
@@ -32,7 +32,7 @@
         <button class="number">0</button>
         <button class="number">.</button>
         <button class="equals span-two">=</button>
-</div>
-    
+        <p class='span-four'>Tip function applies a 20% tip to total.</p></div>
+<div id ="footer" class="span-four">Katie G. Duryea 2024 -&nbsp;<a href="https://www.theodinproject.com/">The Odin Project</a></div>
 </body>
 </html>
